<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_event_types">
         <EditTextPreference 
            android:title="@string/pref_title_event_type"
            android:key="@string/pref_key_event_type_1"
            android:summary="@string/pref_summary_event_type"
            android:defaultValue="@string/default_event_type_1"/>
    </PreferenceCategory>         
    <PreferenceCategory android:title="@string/pref_category_course1">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course1"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course1"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course1"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course1"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course2">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course2"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course2"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course2"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course2"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course3">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course3"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course3"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course3"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course3"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course4">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course4"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course4"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course4"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course4"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course5">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course5"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course5"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course5"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course5"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course6">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course6"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course6"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course6"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course6"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course7">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course7"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course7"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course7"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course7"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/pref_category_course8">
         <EditTextPreference 
            android:title="@string/pref_title_course_name"
            android:key="@string/pref_key_name_course8"
            android:summary="@string/pref_summary_course_name"
            android:defaultValue="@string/default_course_name"/>
         <ListPreference 
            android:title="@string/pref_title_course_color"
            android:key="@string/pref_key_color_course8"
            android:summary="@string/pref_summary_course_color"
            android:defaultValue="@string/default_start_button_color"
            android:entries="@array/color_description"
            android:entryValues="@array/color_value"/>
         <ListPreference 
            android:title="@string/pref_title_interval"
            android:key="@string/pref_key_interval_course8"
            android:summary="@string/pref_summary_interval"
            android:defaultValue="@string/default_course_interval"
            android:entries="@array/interval_description"
            android:entryValues="@array/interval_value"/>
         <CheckBoxPreference 
             android:title="@string/pref_title_course_visibility"
             android:key="@string/pref_key_visibility_course8"
             android:summary="@string/pref_summary_visibility"
             android:defaultValue="@string/default_course_visibility"/>
      </PreferenceCategory>
</PreferenceScreen>